[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-cleaner-env"
version = "0.1.0"
description = "A data cleaner reinforcement learning environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "openai",
    "fastapi",
    "uvicorn",
    "pydantic"
]
